# OctoPrint-BackupScheduler

./: MANIFEST.in  README.md  Taskfile.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: label-sync.yml  main.yml
extras/: README.txt  backupscheduler.md
octoprint_backupscheduler/: __init__.py
octoprint_backupscheduler/static/js/: backupscheduler.js
octoprint_backupscheduler/static/mailtmpl/: backup_failed.html  backup_successful.html  no_mount.html
octoprint_backupscheduler/templates/: backupscheduler_settings.jinja2  backupscheduler_wizard.jinja2
