[build-system]
requires = [
    "setuptools>=68",
]
build-backend = "setuptools.build_meta"

[project]
name = "Backup-Scheduler"
version = "0.3.0"
description = "Schedule OctoPrint backups at regular intervals."
authors = [
    { name = "jneilliii", email = "jneilliii+github@gmail.com" },
]
requires-python = ">=3.7,<4"
dependencies = []
dynamic = [
    "license",
]

[project.entry-points."octoprint.plugin"]
backupscheduler = "octoprint_backupscheduler"

[project.urls]
Homepage = "https://github.com/jneilliii/OctoPrint-BackupScheduler"

[project.optional-dependencies]
develop = [
    "go-task-bin",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "octoprint_backupscheduler",
    "octoprint_backupscheduler.*",
]
